edited index images

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
         <div class="socialMedias">
           <p>
             <a href="https://www.instagram.com/mimugdho/"
-              ><img id="ig" src="/images/ig.png" height="15" alt=""
+              ><img id="ig" src="./images/ig.png" height="15" alt=""
             /></a>
           </p>
           <p>
             <a
               href="https://www.linkedin.com/in/muhaiminul-mugdha-8b03ba303/?trk=opento_sprofile_topcard"
-              ><img src="/images/linkdin.png" height="15" alt=""
+              ><img src="./images/linkdin.png" height="15" alt=""
             /></a>
           </p>
           <p>
             <a href="mailto:muhaiminulmugdha@gmail.com"
-              ><img src="/images/mail.png" height="20" alt=""
+              ><img src="./images/mail.png" height="20" alt=""
             /></a>
           </p>
         </div>
@@ -55,7 +55,7 @@
       <div class="bottomPart">
         <div class="objects">
           <div class="showImage">
-            <img src="/images/onepiece.jpg" height="200" alt="" />
+            <img src="./images/onepiece.jpg" height="200" alt="" />
           </div>
           <div class="showName">
             <p>one piece</p>
@@ -63,13 +63,13 @@
         </div>
 
         <div class="midPic">
-          <img src="/images/mug.png" alt="" />
+          <img src="./images/mug.png" alt="" />
           <div class="lineBtm"></div>
         </div>
 
         <div class="objects">
           <div class="bookImage">
-            <img src="/images/scythe.jpg" height="200" alt="" />
+            <img src="./images/scythe.jpg" height="200" alt="" />
           </div>
           <div class="bookName">
             <p>Scythe</p>
@@ -86,7 +86,7 @@
 
       <div class="aboutBody">
         <div class="leftPic">
-          <img src="/images/flc.png" alt="" height="150" />
+          <img src="./images/flc.png" alt="" height="150" />
         </div>
         <div class="aboutDesc">
           <p>
